--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,4 +20,4 @@ jobs:
         distribution: 'adopt'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file Maven-build1/target/pom.xml
+      run: mvn -X -B package --file ./Maven-build1/target/pom.xml
